# LazyJobSearch

./: .dockerignore  .env  .env.example  .gitignore  =2.0.0  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_IMPLEMENTATION.md  README_RESUME_EVALUATION.md  alembic.ini  config.yaml  create_sample_company.py  demo_careers_discovery.py  demo_company_seeds.py  demo_crawling_fixes.py  docker-compose.yml  dual_resume_anduril_evaluation.py  enhanced_test_jdtarriela_anduril.py  inside_app_examples.sh  pyproject.toml  requirements.txt  run_all_evaluations.py  test_ats_scrapers.py  test_crawling_fixes.py  test_jdtarriela_anduril.py  test_mvp_integration.py  verify_implementation.py  where this go?
.github/workflows/: ci.yml
alembic/: alembic.ini  env.py
alembic/versions/: 0001_initial_core.py  0002_portal_and_apply_extension.py  0003_embedding_feedback_antibot.py  0004_core_missing_tables.py  0005_postgres_extensions_and_indexes.py
apps/resume_ingest/: parsers.py  processor.py
apps/scraper/: scraper_base.py  selenium_scraper.py  site_adapters.py
cli/: ljs.py
config/: example.user.yaml  schema.json
deploy/docker/: Dockerfile.api  Dockerfile.scraper  Dockerfile.worker  docker-compose.yml  init-pgvector.sql
docs/: ALGORITHM_SPECIFICATIONS.md  ARCHITECTURE.md  BACKLOG_IMPLEMENTATION.md  CLI_DESIGN.md  COMPANY_SEEDING.md  INDEX.md  MVP_AUDIT_EXECUTIVE_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  RESUME_PARSER_LLM.md  RESUME_PARSING.md  ROADMAP.md  SCALABILITY_GUIDE.md  TECHNICAL_REVIEW_PACKET.md  TEMPLATE_VERSION_MANAGEMENT.md  portal_template_dsl.schema.json
docs/adrs/: 0001-use-postgres-pgvector.md  0002-selenium-primary-playwright-fallback.md  0003-matching-pipeline-fts-vector-llm.md  0004-openai-provider-abstraction.md  0005-auto-apply-scope-greenhouse-lever.md  0006-embedding-versioning-and-migration.md  0007-adaptive-matching-feedback-loop.md  0008-production-grade-anti-bot-posture.md  0009-multi-llm-provider-expansion.md  README.md  TEMPLATE.md
docs/audits/: README.md  cli_layer_audit.md  job_crawling_audit.md  matching_engine_audit.md  persistence_schema_audit.md  portal_templates_audit.md  resume_ingestion_audit.md  resume_ingestion_audit_updated.md  review_workflow_audit.md
docs/examples/: OPTIMIZATION_EXAMPLES.md
docs/schema/: APPLICATIONS.md  APPLICATION_ARTIFACTS.md  APPLICATION_EVENTS.md  APPLICATION_PROFILES.md  COMPANIES.md  COMPANY_PORTAL_CONFIGS.md  EMBEDDING_VERSIONS.md  JOBS.md  JOB_CHUNKS.md  MATCHES.md  MATCHING_FEATURE_WEIGHTS.md  MATCH_OUTCOMES.md  PORTALS.md  PORTAL_FIELD_DICTIONARY.md  PORTAL_TEMPLATES.md  RESUMES.md  RESUME_CHUNKS.md  REVIEWS.md  SCRAPE_SESSIONS.md  SESSIONS.md  USER_CREDENTIALS.md
lazyjobsearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
libs/autoapply/: __init__.py  security.py  service.py  template_dsl.py
libs/companies/: __init__.py  auto_discovery.py  domain_resolver.py  models.py  portal_detection.py  seeding.py  yaml_writer.py
libs/db/: models.py  session.py  soft_delete.py
libs/embed/: openai_provider.py  provider_base.py  versioning.py
libs/jobs/: __init__.py  ingestion.py
libs/llm/: openai_provider.py  provider_base.py  scoring_prompts.py
libs/matching/: __init__.py  basic_pipeline.py  feedback.py  persistence.py  pipeline.py
libs/nlp/: chunkers.py  extractors.py
libs/notifications/: __init__.py  digest.py
libs/observability/: __init__.py  metrics.py
libs/resume/: __init__.py  chunker.py  embedding_service.py  ingestion.py  llm_provider.py  llm_service.py  models.py  parser.py  prompt_templates.py  review.py
libs/scraper/: anduril_adapter.py  anti_bot.py  ats_scrapers.py  careers_discovery.py  crawl_worker.py  failure_metrics.py  pagination.py  retry_logic.py
reports/: cli_smoke_report.json
scripts/: init-db.sql  init_and_hold.sh  setup.sh  validate_schema_docs.py
seeds/: companies.csv  companies.txt
seeds/companies/: exampleco.yaml  palantir.yaml
tests/: test_careers_discovery.py  test_careers_discovery_simple.py  test_cli_basic.py  test_company_auto_discovery.py  test_company_seeding_idempotency.py  test_ingestion_resume.py  test_integration.py  test_managers_stubs.py  test_matching_performance.py  test_matching_pipeline.py  test_mvp_implementation.py  test_pii_redaction.py  test_portal_template_validation.py  test_pytorch_integration.py  test_resume_deduplication.py  test_resume_format_support.py  test_resume_parsing_llm.py  test_resume_processing.py  test_schema_validation.py  test_template_security.py
(+9 files in other folders)
