[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyjobsearch"
version = "0.1.0"
description = "CLI and services for LazyJobSearch (resume matching & auto-apply)"
authors = [{name="LazyJobSearch Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0",
  "psycopg2-binary>=2.9",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer[all]>=0.12.3",
  "jsonschema>=4.22",
  "torch>=2.0.0",
  "selenium>=4.0",
  "beautifulsoup4>=4.9",
  "requests>=2.25",
  "alembic>=1.8",
  "pgvector>=0.4.0",
  "openai>=1.0",
  "numpy>=1.20",
  "PyPDF2>=3.0",
  "python-docx>=1.2",
  "webdriver-manager>=4.0",
  "celery[redis]>=5.0",
  "minio>=7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[project.scripts]
ljs = "cli.ljs:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "libs*", "config*", "apps*"]

[tool.pytest.ini_options]
addopts = "-q"
python_files = "test_*.py"

