[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyjobsearch"
version = "0.1.0"
description = "CLI and services for LazyJobSearch (resume matching & auto-apply)"
authors = [{name="LazyJobSearch Team"}]
readme = "README.md"
requires-python = ">=3.11"

# --- Core Dependencies ---
dependencies = [
  "SQLAlchemy>=2.0.29",
  "psycopg2-binary>=2.9.9",
  "pgvector>=0.2.5",
  "alembic>=1.13.1",
  "PyYAML>=6.0.1",
  "pydantic>=2.6.4",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "typer[all]>=0.12.3",
  "rich>=13.7.1",
  "click>=8.1.7",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
  "pypdf>=4.1.0",
  "python-magic>=0.4.27",
  "structlog>=24.1.0",
  "python-json-logger>=2.0.7",
  "python-dateutil>=2.9.0",
  "pytz>=2024.1",
  "humanize>=4.9.0",
  "tqdm>=4.66.2",
]

[project.scripts]
ljs = "cli.ljs:main"

[project.optional-dependencies]
# --- Web Scraping & API Clients ---
scraping = [
  "selenium>=4.18.1",
  "undetected-chromedriver>=3.5.5",
  "playwright>=1.42.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.1.0",
  "httpx>=0.27.0",
  "requests>=2.31.0",
  "aiohttp>=3.9.3",
  "cachetools>=5.3.3",
  "selenium-stealth>=1.0.6",
  "fake-useragent>=1.5.1",
  "python-anticaptcha>=1.0.0", # Optional captcha solving
]

# --- Reliability & Performance ---
reliability = [
  "tenacity>=8.2.3",
  "py-circuitbreaker>=0.1.2",
  "backoff>=2.2.1",
  "ratelimit>=2.2.1",
]

# --- Machine Learning & Embeddings ---
ml = [
  "openai>=1.14.2",
  "google-generativeai>=0.4.1",
  "tiktoken>=0.6.0",
  "numpy>=1.26.4",
  "scikit-learn>=1.4.1.post1",
  "pandas>=2.2.1",
  "pyarrow>=15.0.2",
]

# --- Task Queue & Scheduling ---
tasks = [
  "celery>=5.3.6",
  "redis>=5.0.3",
  "flower>=2.0.1",
  "schedule>=1.2.1",
  "apscheduler>=3.10.4",
]

# --- Monitoring & Storage ---
monitoring = [
  "sentry-sdk>=1.44.0",
  "prometheus-client>=0.20.0",
  "boto3>=1.34.69",
  "google-cloud-storage>=2.16.0",
  "minio>=7.2.5",
]

# --- API Framework (Optional) ---
api = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart==0.0.9",
]

# --- Development & Testing ---
dev = [
  "pytest>=8.1.1",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.5",
  "pytest-mock>=3.12.0",
  "factory-boy>=3.3.0",
  "faker>=24.2.0",
  "ipython>=8.22.2",
  "ipdb>=0.13.13",
  "black>=24.3.0",
  "ruff>=0.3.4",
  "mypy>=1.9.0",
  "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
addopts = "-q"
python_files = "test_*.py"

[tool.setuptools.packages.find]
include = ["cli*", "libs*", "config*", "alembic*"]